--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,8 +1,8 @@
-[0x666]
-last_change = 2023-12-11T18:27:36.201646Z
-addr = 0x666
-name = "aGlibc24"
-size = 0xa
+[0x670]
+last_change = 2023-12-11T18:27:36.216104Z
+addr = 0x670
+name = "aGlibc225"
+size = 0xc
 
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
