--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.610852Z
-last_push_artifact = 0x4fd8
+last_push_time = 2023-12-11T18:27:36.626267Z
+last_push_artifact = 0x50a0
 last_push_artifact_type = "global variable"
