--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x619]
+last_change = 2023-12-11T18:27:36.429158Z
+addr = 0x619
+name = "aRead"
+size = 0x5
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -9,12 +15,6 @@ last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
-
-[0x3170]
-last_change = 2023-12-11T18:27:36.413432Z
-addr = 0x3170
-name = "aOurStackPointe"
-size = 0x44
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
