--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,8 +16,8 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x50a8]
-last_change = 2023-12-11T18:27:36.786287Z
-addr = 0x50a8
-name = "__libc_start_main"
+[0x5000]
+last_change = 2023-12-11T18:27:36.800924Z
+addr = 0x5000
+name = "__data_start"
 size = 0x1
