--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.033238Z
-last_push_artifact = "Elf64_Sym"
-last_push_artifact_type = "struct"
+last_push_time = 2023-12-11T18:27:36.050042Z
+last_push_artifact = 0x5020
+last_push_artifact_type = "global variable"
