--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,17 +4,17 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x222d]
-last_change = 2023-12-11T18:27:36.697019Z
-addr = 0x222d
-name = "challenge"
-size = 0x1
-
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
+
+[0x2828]
+last_change = 2023-12-11T18:27:36.710388Z
+addr = 0x2828
+name = ".term_proc"
+size = 0x1
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
