--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,11 +10,11 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x36f0]
-last_change = 2023-12-11T18:27:36.066220Z
-addr = 0x36f0
-name = "aGoodbye"
-size = 0x9
+[0x36e2]
+last_change = 2023-12-11T18:27:36.081472Z
+addr = 0x36e2
+name = "aYouSaidS"
+size = 0xe
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
