--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x3085]
-last_change = 2023-12-11T18:27:36.473900Z
-addr = 0x3085
-name = "a31s23s18s"
-size = 0x18
-
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5098]
+last_change = 2023-12-11T18:27:36.488004Z
+addr = 0x5098
+name = "__assert_fail"
 size = 0x1
