--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x641]
-last_change = 2023-12-11T18:27:36.328058Z
-addr = 0x641
-name = "aStrerror"
-size = 0x9
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -20,4 +14,10 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5010]
+last_change = 2023-12-11T18:27:36.342276Z
+addr = 0x5010
+name = "stdout@@GLIBC_2.2.5"
 size = 0x1
