--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,14 +10,14 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
+[0x36f0]
+last_change = 2023-12-11T18:27:36.066220Z
+addr = 0x36f0
+name = "aGoodbye"
+size = 0x9
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x5020]
-last_change = 2023-12-11T18:27:36.050042Z
-addr = 0x5020
-name = "stdin@@GLIBC_2.2.5"
 size = 0x1
