--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,8 +16,8 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x50d0]
-last_change = 2023-12-11T18:27:36.141727Z
-addr = 0x50d0
-name = "strerror"
+[0x5000]
+last_change = 2023-12-11T18:27:36.158222Z
+addr = 0x5000
+name = "data_start"
 size = 0x1
