--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.141727Z
-last_push_artifact = 0x50d0
+last_push_time = 2023-12-11T18:27:36.158222Z
+last_push_artifact = 0x5000
 last_push_artifact_type = "global variable"
