--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
-[0x5cf]
-last_change = 2023-12-11T18:27:36.683055Z
-addr = 0x5cf
-name = "aPuts"
-size = 0x5
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x222d]
+last_change = 2023-12-11T18:27:36.697019Z
+addr = 0x222d
+name = "challenge"
+size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
