--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,11 +10,11 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x305b]
-last_change = 2023-12-11T18:27:37.654574Z
-addr = 0x305b
-name = "aDataLeInt"
-size = 0xe
+[0x36f9]
+last_change = 2023-12-11T18:27:37.669216Z
+addr = 0x36f9
+name = "aStdin_0"
+size = 0x8
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
