--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,12 +4,6 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1100]
-last_change = 2023-12-11T18:27:37.159006Z
-addr = 0x1100
-name = ".putchar"
-size = 0x1
-
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -20,4 +14,10 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
+size = 0x1
+
+[0x5008]
+last_change = 2023-12-11T18:27:37.173518Z
+addr = 0x5008
+name = "__dso_handle"
 size = 0x1
