--- a/global_vars.toml
+++ b/global_vars.toml
@@ -15,3 +15,9 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x5070]
+last_change = 2023-12-11T18:27:37.257384Z
+addr = 0x5070
+name = "putchar"
+size = 0x1
