--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,10 +4,10 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
-[0x1120]
-last_change = 2023-12-11T18:27:37.299978Z
-addr = 0x1120
-name = ".puts"
+[0x14ac]
+last_change = 2023-12-11T18:27:37.314199Z
+addr = 0x14ac
+name = "bin_padding"
 size = 0x1
 
 [0x2548]
