--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.454204Z
-last_push_artifact = 0x3608
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-11T18:27:37.468878Z
+last_push_artifact = "Elf64_Sym"
+last_push_artifact_type = "struct"
