--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.819041Z
-last_push_artifact = 0x5b1
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-11T18:27:37.833168Z
+last_push_artifact = "Elf64_Vernaux"
+last_push_artifact_type = "struct"
