--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.639712Z
-last_push_artifact = 0x625
+last_push_time = 2023-12-11T18:27:37.654574Z
+last_push_artifact = 0x305b
 last_push_artifact_type = "global variable"
