--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.698049Z
-last_push_artifact = 0x601
+last_push_time = 2023-12-11T18:27:37.712594Z
+last_push_artifact = 0x4f98
 last_push_artifact_type = "global variable"
