--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.788379Z
-last_push_artifact = "Elf64_Vernaux"
-last_push_artifact_type = "struct"
+last_push_time = 2023-12-11T18:27:37.803422Z
+last_push_artifact = 0x639
+last_push_artifact_type = "global variable"
