--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,6 +4,12 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
+[0x1120]
+last_change = 2023-12-11T18:27:37.299978Z
+addr = 0x1120
+name = ".puts"
+size = 0x1
+
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -14,10 +20,4 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x4f60]
-last_change = 2023-12-11T18:27:37.286282Z
-addr = 0x4f60
-name = "_GLOBAL_OFFSET_TABLE_"
 size = 0x1
