--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.286282Z
-last_push_artifact = 0x4f60
+last_push_time = 2023-12-11T18:27:37.299978Z
+last_push_artifact = 0x1120
 last_push_artifact_type = "global variable"
