--- a/global_vars.toml
+++ b/global_vars.toml
@@ -10,11 +10,11 @@ addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
 
-[0x33b8]
-last_change = 2023-12-11T18:27:37.538521Z
-addr = 0x33b8
-name = "aInThisLevelThe"
-size = 0x34
+[0x3328]
+last_change = 2023-12-11T18:27:37.552370Z
+addr = 0x3328
+name = "aTheBufferIsDBy"
+size = 0x52
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
