--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.538521Z
-last_push_artifact = 0x33b8
+last_push_time = 2023-12-11T18:27:37.552370Z
+last_push_artifact = 0x3328
 last_push_artifact_type = "global variable"
