--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
+[0x3b8]
+last_change = 2023-12-11T18:27:37.947673Z
+addr = 0x3b8
+name = "elf_gnu_hash_bucket"
+size = 0x1
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
-
-[0x1150]
-last_change = 2023-12-11T18:27:37.932982Z
-addr = 0x1150
-name = ".__assert_fail"
-size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
