--- a/global_vars.toml
+++ b/global_vars.toml
@@ -4,6 +4,12 @@ addr = 0x6b4
 name = "aFclose"
 size = 0x7
 
+[0x12a0]
+last_change = 2023-12-11T18:27:37.228813Z
+addr = 0x12a0
+name = "frame_dummy"
+size = 0x1
+
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
@@ -14,10 +20,4 @@ size = 0x1f
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
-size = 0x1
-
-[0x50e8]
-last_change = 2023-12-11T18:27:37.215218Z
-addr = 0x50e8
-name = "__gmon_start__"
 size = 0x1
