--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:36.996596Z
-last_push_artifact = 0x5050
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-11T18:27:37.011035Z
+last_push_artifact = 0x4d70
+last_push_artifact_type = "comment"
