--- a/structs/Elf64_Verneed.toml
+++ b/structs/Elf64_Verneed.toml
@@ -1,22 +1,6 @@
 [metadata]
 name = "Elf64_Verneed"
-size = 0x8
-last_change = 2023-12-10T08:13:30.753037Z
+size = 0x0
+last_change = 2023-12-11T18:27:37.890490Z
 
-[members.0x0]
-name = "vn_version"
-offset = 0x0
-type = "unsigned short"
-size = 0x2
-
-[members.0x2]
-name = "vn_cnt"
-offset = 0x2
-type = "unsigned short"
-size = 0x2
-
-[members.0x4]
-name = "vn_file"
-offset = 0x4
-type = ""
-size = 0x4
+[members]
