--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x3a0]
-last_change = 2023-12-11T18:27:37.187199Z
-addr = 0x3a0
-name = "elf_gnu_hash_nbuckets"
-size = 0x4
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -15,6 +9,12 @@ last_change = 2023-12-10T08:13:37.912710Z
 addr = 0x2548
 name = "aSZombienatorCr"
 size = 0x1f
+
+[0x3000]
+last_change = 2023-12-11T18:27:37.201591Z
+addr = 0x3000
+name = "_IO_stdin_used"
+size = 0x1
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
