--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x601]
+last_change = 2023-12-11T18:27:37.698049Z
+addr = 0x601
+name = "aPrintf"
+size = 0x7
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -15,9 +21,3 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
-
-[0x4ff0]
-last_change = 2023-12-11T18:27:37.683436Z
-addr = 0x4ff0
-name = "_ITM_registerTMCloneTable_ptr"
-size = 0x8
