--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:27:37.862270Z
-last_push_artifact = "Elf64_Verneed"
-last_push_artifact_type = "struct"
+last_push_time = 2023-12-11T18:27:37.876187Z
+last_push_artifact = 0x1190
+last_push_artifact_type = "global variable"
