--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,10 +22,10 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x4fa8]
-last_change = 2023-12-11T18:40:42.179987Z
-addr = 0x4fa8
-name = "read_ptr"
+[0x4fd8]
+last_change = 2023-12-11T18:40:42.197665Z
+addr = 0x4fd8
+name = "_ITM_deregisterTMCloneTable_ptr"
 size = 0x8
 
 [0x5040]
