--- a/structs/Elf64_Rela.toml
+++ b/structs/Elf64_Rela.toml
@@ -1,16 +1,6 @@
 [metadata]
 name = "Elf64_Rela"
-size = 0x10
-last_change = 2023-12-11T18:40:42.582226Z
+size = 0x0
+last_change = 2023-12-11T18:40:42.599944Z
 
-[members.0x0]
-name = "r_offset"
-offset = 0x0
-type = "unsigned long"
-size = 0x8
-
-[members.0x8]
-name = "r_info"
-offset = 0x8
-type = ""
-size = 0x8
+[members]
