--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x666]
-last_change = 2023-12-11T18:40:42.722677Z
-addr = 0x666
-name = "aGlibc24"
-size = 0xa
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -21,6 +15,12 @@ last_change = 2023-12-11T18:27:38.840572Z
 addr = 0x3008
 name = "s"
 size = 0x53
+
+[0x300e]
+last_change = 2023-12-11T18:40:42.739907Z
+addr = 0x300e
+name = "format"
+size = 0xf
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
