--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,7 +1,7 @@
-[0x3a0]
-last_change = 2023-12-11T18:40:42.851400Z
-addr = 0x3a0
-name = "elf_gnu_hash_nbuckets"
+[0x388]
+last_change = 2023-12-11T18:40:42.867091Z
+addr = 0x388
+name = "aGnu_1"
 size = 0x4
 
 [0x6b4]
