--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:42.851400Z
-last_push_artifact = 0x3a0
+last_push_time = 2023-12-11T18:40:42.867091Z
+last_push_artifact = 0x388
 last_push_artifact_type = "global variable"
