--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,9 +1,3 @@
-[0x61e]
-last_change = 2023-12-11T18:40:42.214930Z
-addr = 0x61e
-name = "aStdout"
-size = 0x7
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
@@ -27,6 +21,12 @@ last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
+
+[0x4f90]
+last_change = 2023-12-11T18:40:42.231406Z
+addr = 0x4f90
+name = "__stack_chk_fail_ptr"
+size = 0x8
 
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
