--- a/structs/Elf64_Verneed.toml
+++ b/structs/Elf64_Verneed.toml
@@ -1,28 +1,6 @@
 [metadata]
 name = "Elf64_Verneed"
-size = 0xc
-last_change = 2023-12-11T18:40:42.917680Z
+size = 0x0
+last_change = 2023-12-11T18:40:42.933718Z
 
-[members.0x0]
-name = "vn_version"
-offset = 0x0
-type = "unsigned short"
-size = 0x2
-
-[members.0x2]
-name = "vn_cnt"
-offset = 0x2
-type = "unsigned short"
-size = 0x2
-
-[members.0x4]
-name = "vn_file"
-offset = 0x4
-type = "unsigned int"
-size = 0x4
-
-[members.0x8]
-name = "vn_aux"
-offset = 0x8
-type = ""
-size = 0x4
+[members]
