--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:42.041607Z
-last_push_artifact = 0x5098
-last_push_artifact_type = "global variable"
+last_push_time = 2023-12-11T18:40:42.058766Z
+last_push_artifact = 0x223d
+last_push_artifact_type = "function"
