--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x3b8]
+last_change = 2023-12-11T18:40:42.968468Z
+addr = 0x3b8
+name = "elf_gnu_hash_bucket"
+size = 0x1
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
