--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,14 +1,14 @@
-[0x5ed]
-last_change = 2023-12-11T18:40:42.544621Z
-addr = 0x5ed
-name = "aStdin"
-size = 0x6
-
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
 name = "aFclose"
 size = 0x7
+
+[0x1140]
+last_change = 2023-12-11T18:40:42.564705Z
+addr = 0x1140
+name = ".printf"
+size = 0x1
 
 [0x2548]
 last_change = 2023-12-10T08:13:37.912710Z
