--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:42.458980Z
-last_push_artifact = "Elf64_Dyn"
-last_push_artifact_type = "struct"
+last_push_time = 2023-12-11T18:40:42.475739Z
+last_push_artifact = 0x4d68
+last_push_artifact_type = "comment"
