--- a/functions/000050a0.toml
+++ b/functions/000050a0.toml
@@ -1,4 +1,9 @@
 [metadata]
 addr = 0x50a0
 size = 0x8
-last_change = 2023-12-11T18:40:42.772610Z
+last_change = 2023-12-11T18:40:42.788765Z
+
+[header]
+last_change = 2023-12-11T18:40:42.788765Z
+name = "__imp___cxa_finalize"
+addr = 0x50a0
