--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x5d4]
+last_change = 2023-12-11T18:40:42.354034Z
+addr = 0x5d4
+name = "aStackChkFail"
+size = 0x11
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
