--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:41.991634Z
-last_push_artifact = 0x30b4
+last_push_time = 2023-12-11T18:40:42.007676Z
+last_push_artifact = 0x1260
 last_push_artifact_type = "global variable"
