--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:42.371272Z
-last_push_artifact = "Elf64_Vernaux"
+last_push_time = 2023-12-11T18:40:42.389583Z
+last_push_artifact = "Elf64_Verneed"
 last_push_artifact_type = "struct"
