--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-11T18:40:43.352381Z
-last_push_artifact = 0x4f78
+last_push_time = 2023-12-11T18:40:43.369511Z
+last_push_artifact = 0x3082
 last_push_artifact_type = "global variable"
