--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,11 +22,11 @@ addr = 0x3082
 name = "s"
 size = 0x9
 
-[0x313a]
-last_change = 2023-12-12T19:30:06.693831Z
-addr = 0x313a
-name = "aMain"
-size = 0x5
+[0x30a2]
+last_change = 2023-12-12T19:30:06.711611Z
+addr = 0x30a2
+name = "aPayloadSize"
+size = 0xf
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
