--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.287410Z
-last_push_artifact = 0x4fc8
+last_push_time = 2023-12-12T19:30:06.303653Z
+last_push_artifact = 0x4fa0
 last_push_artifact_type = "global variable"
