--- a/global_vars.toml
+++ b/global_vars.toml
@@ -28,14 +28,14 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x5008]
-last_change = 2023-12-12T19:30:06.656444Z
-addr = 0x5008
-name = ""
-size = 0x8
-
 [0x5040]
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
+size = 0x1
+
+[0x50a0]
+last_change = 2023-12-12T19:30:06.676045Z
+addr = 0x50a0
+name = "__cxa_finalize"
 size = 0x1
