--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.070517Z
-last_push_artifact = 0x7d8
-last_push_artifact_type = "comment"
+last_push_time = 2023-12-12T19:30:06.087874Z
+last_push_artifact = 0x10e0
+last_push_artifact_type = "function"
