--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,3 +1,9 @@
+[0x3c4]
+last_change = 2023-12-12T19:30:06.545244Z
+addr = 0x3c4
+name = "elf_gnu_hash_chain"
+size = 0x1
+
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
 addr = 0x6b4
