--- a/global_vars.toml
+++ b/global_vars.toml
@@ -28,9 +28,9 @@ addr = 0x4148
 name = "__cxa_finalize"
 size = 0x1
 
-[0x4d70]
-last_change = 2023-12-12T19:30:06.121016Z
-addr = 0x4d70
+[0x4f78]
+last_change = 2023-12-12T19:30:06.137264Z
+addr = 0x4f78
 name = ""
 size = 0x8
 
