--- a/global_vars.toml
+++ b/global_vars.toml
@@ -1,8 +1,8 @@
-[0x5df]
-last_change = 2023-12-12T19:30:06.562818Z
-addr = 0x5df
-name = "aMmap"
-size = 0x5
+[0x3a8]
+last_change = 2023-12-12T19:30:06.580365Z
+addr = 0x3a8
+name = "elf_gnu_hash_bitmask_nwords"
+size = 0x4
 
 [0x6b4]
 last_change = 2023-12-10T08:12:32.615093Z
