--- a/metadata.toml
+++ b/metadata.toml
@@ -1,5 +1,5 @@
 user = "flipout"
 version = 0x0
-last_push_time = 2023-12-12T19:30:06.562818Z
-last_push_artifact = 0x5df
+last_push_time = 2023-12-12T19:30:06.580365Z
+last_push_artifact = 0x3a8
 last_push_artifact_type = "global variable"
