--- a/global_vars.toml
+++ b/global_vars.toml
@@ -16,17 +16,17 @@ addr = 0x3008
 name = "s"
 size = 0x53
 
+[0x3010]
+last_change = 2023-12-12T19:30:06.036990Z
+addr = 0x3010
+name = "assertion"
+size = 0x20
+
 [0x3082]
 last_change = 2023-12-11T18:40:43.369511Z
 addr = 0x3082
 name = "s"
 size = 0x9
-
-[0x3130]
-last_change = 2023-12-12T19:30:06.020536Z
-addr = 0x3130
-name = "function"
-size = 0xa
 
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
