--- a/global_vars.toml
+++ b/global_vars.toml
@@ -22,6 +22,12 @@ addr = 0x3082
 name = "s"
 size = 0x9
 
+[0x313a]
+last_change = 2023-12-12T19:30:06.693831Z
+addr = 0x313a
+name = "aMain"
+size = 0x5
+
 [0x4148]
 last_change = 2023-12-10T08:13:31.095797Z
 addr = 0x4148
@@ -32,10 +38,4 @@ size = 0x1
 last_change = 2023-12-11T18:40:39.055412Z
 addr = 0x5040
 name = "__errno_location"
-size = 0x1
-
-[0x50a0]
-last_change = 2023-12-12T19:30:06.676045Z
-addr = 0x50a0
-name = "__cxa_finalize"
 size = 0x1
